SERVER-53718 Enable shard targeting for other predicates in presence of $geoNear